tests/ui/fail/fn-generic-01.stderr
error: must not be generic
 --> tests/ui/fail/fn-generic-01.rs:5:11
  |
5 |     fn foo<T>() {}
  |           ^^^
